[aix] Fix thread creation with huge stack sizes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b21
    • aix

      On linux, pthread_attr_setstacksize succeeds if called huge values, but pthread_create() then fails. On Aix, pthread_attr_setstacksize fails if passed a value exceeding the limits and leaves the minimal system thread stack size in attr. Thus thread creation succeeds and leads to crashes after thread creation when the guard pages shall be protected but don't fit on the tiny stack created.

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Goetz Lindenmaier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: