8186293: [aix] Fix thread creation with huge stack sizes

Reviewed-by: stuefe, dholmes